@@ -49,6 +49,7 @@ character-needed=Personal logistic requests are only possible when using a chara
 empty-cursor-needed=Click with an empty cursor.
 trash-paused=Autotrash paused
 trash-unpaused=Autotrash unpaused
+adjusted-trash-amount=Adjusted trash amount for __1__ to __2__
 
 [controls]
 autotrash_pause=Pause Autotrash
